--- a/main.html
+++ b/main.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 
 <html>
 
@@ -8,10 +8,26 @@
 
 <body>
 	<p>My favorite color is <span>red</span</p>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
+	the entire body must be written by student -->
+<!--     <script type="text/javascript" src="./script.js">
 </script>
 
 </body>
 
+</html> -->
+
+
+<!DOCTYPE html>
+<html>
+<head>
+  <title>My Favorite Color</title>
+  <style>
+    .favorite-color {
+      color: blue;
+    }
+  </style>
+</head>
+<body>
+  <p>My favorite color is <span class="favorite-color">blue</span>.</p>
+</body>
 </html>
