--- a/main.html
+++ b/main.html
@@ -1,4 +1,4 @@
-<!-- <!DOCTYPE html>
+<!DOCTYPE html>
 
 <html>
 
@@ -7,27 +7,11 @@
 </head>
 
 <body>
-	<p>My favorite color is <span>red</span</p>
-	the entire body must be written by student -->
-<!--     <script type="text/javascript" src="./script.js">
+  <p>My favorite color is <span class="favorite-color">blue</span>.</p>
+	<!-- the entire body must be written by student -->
+    <script type="text/javascript" src="./script.js">
 </script>
 
 </body>
 
-</html> -->
-
-
-<!DOCTYPE html>
-<html>
-<head>
-  <title>My Favorite Color</title>
-  <style>
-    .favorite-color {
-      color: blue;
-    }
-  </style>
-</head>
-<body>
-  <p>My favorite color is <span class="favorite-color">blue</span>.</p>
-</body>
 </html>
